--- a/app/css/sidebar.css
+++ b/app/css/sidebar.css
@@ -7,7 +7,8 @@
 /* Toggle Styles */
 
 #wrapper {
-  padding-left: 0;
+    padding-left: 0;
+    transition: padding .5s ease;
 }
 
 #wrapper.toggled {
